# cargo-multi

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
src/: main.rs
