[package]
authors = ["Cyril Plisko <cyril.plisko@mountall.com>",
           "Alexander Goldberg <algold@gmail.com>"]
description = "Extends cargo to run the given command on multiple crates similar to 'git multi'"
homepage = "https://github.com/imp/cargo-multi"
keywords = ["cargo", "subcommand", "multi"]
license = "Apache-2.0/MIT"
name = "cargo-multi"
repository = "https://github.com/imp/cargo-multi.git"
version = "0.4.4"

[dependencies]
clap = "2.4.0"
itertools = "0.4.13"
walkdir = "0.1.5"

[dependencies.clippy]
optional = true
version = "0.0.*"

[features]
default = []
